# gpx-etl

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
data/: gpx_trk_trkseg.gpx
gpx-etl/: convert.py  main.py  process.py  read.py  reader.py  utils.py
gpx_etl/: convert.py  read.py  transform.py  utils.py
tests/: __init__.py  convert_test.py  process_test.py  test_utils.py  transform_test.py
tests/test_files/: missing_time.gpx
