[tool.ruff]
line-length = 79

[tool.poetry]
name = "gpx-etl"
version = "0.1.0"
description = "Parse, transform, process and create statistics from gpx files."
authors = ["pakdelm <mehrshad.pakdel@posteo.de>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.2"
pandas-stubs = "^1.5.2.230105"
numpy = "^1.24.1"
gpxpy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
Mypy = "^0.991"
ruff = "^0.0.47"
black = "^23.1.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
