[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "gpx-etl"
version = "0.1.0"
description = "Parse, transform, process and create statistics from gpx files."
authors = ["pakdelm <mehrshad.pakdel@posteo.de>"]
license = "Apache License 2.0"
packages = [
    { include = "gpx-etl/gpx-etl" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.2"
gpxpy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^1.5.2.230105"
Mypy = "^0.991"
ruff = "^0.0.47"
black = "^23.1.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
