[tool.poetry]
name = "gpx-etl"
version = "0.1.0"
description = "Parse, transform, process and create statistics from gpx files."
authors = ["pakdelm <mehrshad.pakdel@posteo.de>"]
license = "Apache License 2.0"
packages = [
    { include = "gpx_etl/*.py" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.2"
gpxpy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^1.5.2.230105"
Mypy = "^0.991"
ruff = "^0.1.14"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # isort
    "I",
]

[tool.mypy]
ignore_missing_imports = true

[pytest]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"